--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,3 +45,14 @@ jobs:
         run: |
           ./qshell-linux-x64-v2.4.2 account ${{ secrets.QINIU_AK }} ${{ secrets.QINIU_SK }} gryen-gtd
           ./qshell-linux-x64-v2.4.2 qupload2 --src-dir=/home/runner/work/gryen-gtd/gryen-gtd/public/dist --bucket=targaryen-top --key-prefix=dist/ --rescan-local=true --skip-file-prefixes=test,demo,.qrsignore --skip-path-prefixes=temp/,tmp/ --skip-fixed-strings=.svn,.git --skip-suffixes=.DS_Store,.exe
+
+      - name: Deploy php code to ali-cloud
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.ALI_CLOUD_REMOTE_HOST }}
+          username: ${{ secrets.ALI_CLOUD_REMOTE_USER }}
+          password: ${{ secrets.ALI_CLOUD_REMOTE_PASSWORD }}
+          port: ${{ secrets.ALI_CLOUD_REMOTE_PORT }}
+          script: cd /home/gryen/srvs/gryen-gtd && /usr/bin/php artisan down && git fetch --all && git reset --hard origin/master && git pull && /usr/bin/composer install && /usr/bin/php artisan up
+          
+        
