--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 
 name: Deploy
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -23,30 +23,47 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Setup PHP environment
+        uses: shivammathur/setup-php@b7d1d9c9a92d8d8463ce36d7f60da34d461724f8
+        with:
+          php-version: '8.0'
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
           persist-credentials: false
 
-      # Runs a single command using the runners shell
-      - name: Install and Build 🔧
+      - name: Setup directory permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      - name: Install and build static files 🔧
         run: |
           npm install
           npm run prod
 
-      # Runs a set of commands using the runners shell
-      - name: Download qshell
+      - name: Install php dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+      - name: Generate testing key
+        run: php artisan key:generate --env testing
+
+      - name: Migrate testing data
+        run: php artisan migrate --env testing
+
+      - name: Run testing
+        run: php artisan test
+
+      # Upload static files to Kodo
+      - name: Upload static files to Kodo
         run: |
           wget http://devtools.qiniu.com/qshell-linux-x64-v2.4.2.zip
           unzip qshell-linux-x64-v2.4.2.zip
           chmod +x ./qshell-linux-x64-v2.4.2
-          
-      - name: Account to qiniu and upload
-        run: |
           ./qshell-linux-x64-v2.4.2 account ${{ secrets.QINIU_AK }} ${{ secrets.QINIU_SK }} gryen-gtd
           ./qshell-linux-x64-v2.4.2 qupload2 --src-dir=/home/runner/work/gryen-gtd/gryen-gtd/public/dist --bucket=gryen --key-prefix=dist/ --rescan-local=true --skip-file-prefixes=test,demo,.qrsignore --skip-path-prefixes=temp/,tmp/ --skip-fixed-strings=.svn,.git --skip-suffixes=.DS_Store,.exe
 
+      # Deploy php code to alicloud
       - name: Deploy php code to alicloud
         uses: appleboy/ssh-action@master
         with:
@@ -55,5 +72,3 @@ jobs:
           password: ${{ secrets.ALI_CLOUD_REMOTE_PASSWORD }}
           port: ${{ secrets.ALI_CLOUD_REMOTE_PORT }}
           script: cd /home/gryen/srvs/gryen-gtd && /usr/bin/php artisan down && git fetch --all && git reset --hard origin/master && git pull && /usr/bin/composer install && /usr/bin/php artisan up
-          
-        
