--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@toast-ui/editor": "^2.4.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21",
     "bootstrap": "^4.5.2",
     "cross-env": "^7.0",
@@ -26,11 +27,12 @@
     "lazysizes": "^5.2.2",
     "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
-    "postcss": "^8.1",
+    "postcss": "^8.2.4",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.3.1",
+    "tailwindcss": "^2.0.2",
     "vue": "^3.0.5",
     "vue-loader": "^16.1.0",
     "vue-router": "4"
