--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
     "postcss": "^8.2.4",
+    "prosemirror-commands": "^1.1.5",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-model": "^1.13.3",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-transform": "^1.2.11",
+    "prosemirror-view": "^1.17.5",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
