--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21",
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "2.2.2",
     "cross-env": "^7.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
