--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21",
+    "babel-plugin-prismjs": "^2.0.1",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "2.2.2",
     "cross-env": "^7.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
-    "highlight.js": "^10.4.1",
     "jquery": "^3.5.1",
     "jquery-serializejson": "^3.1.0",
     "laravel-echo": "^1.8.1",
@@ -29,11 +29,14 @@
     "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
     "postcss": "^8.2.4",
+    "prismjs": "^1.23.0",
     "prosemirror-commands": "^1.1.5",
+    "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.13.3",
     "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.2.11",
     "prosemirror-view": "^1.17.5",
