--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,13 @@
 name: Deploy
 
 # Controls when the action will run.
-on:
+# on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-    types: [ assigned ]
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
+  #   types: [ assigned ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
